[package]
name = "devker"
version = "0.1.2"
authors = ["Pascal Chen <pascal.chen@devling.xyz>"]
edition = "2018"
description = "Rust Core Project"
repository = "https://github.com/TimeEngineer/DevKer"
documentation = "https://docs.rs/devker"
readme = "README.md"
keywords = ["deflate"]
categories = ["compression"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]