[package]
name = "bench_compression"
version = "0.1.0"
authors = ["Pascal Chen <pascal.chen@devling.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
libflate = "1"
devker = { path = "../" }

[[bin]]
name = "wiki"
path = "src/wiki.rs"